src/main/resources/Krakatau-master/tests/assembler/good/floatliterals.j
###preprocess###
.class public [6]
.super [7]


.const [1] = Utf8 floatliterals
.const [2] = Utf8 java/lang/Object
.const [3] = Utf8 Code
.const [4] = Utf8 main
.const [5] = Utf8 ([Ljava/lang/String;)V
.const [6] = Class [1]
.const [7] = Class [2]


.method public static [4] : [5]
    .attribute [3] .code stack 10 locals 10
        ; Min denormal
        ldc2_w -0x0.0000000000001p-1022
        ldc2_w -0x1p-1074
        ldc2_w -0x10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000p-1474
        ldc2_w -0x1000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000p-2274

        ; Max denormal
        ldc2_w -0x0.fffffffffffffp-1022
        ldc2_w -0xfffffffffffffp-1074

        ; Float min denormal
        ldc 0x0.000002p-126F
        ldc 0x0.000001p-125F
        ldc 0x10.000000p-153F
        ldc 0x01p-149F
        ldc 0x10000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000p-549F
        ldc 0x100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000p-2149F
        return
    .end code
.end method

###range(13, 65535):.const [{}] = Utf8 ''
###
.end class