src/main/resources/Krakatau-master/tests/assembler/bad/toomanyldcs.j
###preprocess###
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 910 locals 10
###range(256,):ldc {}
###
        return
    .end code
.end method
.end class
